tests/poof/fixtures/errors/error6.cpp

struct foo
{
  int bar;
};

poof(
  func (foo A)
  {
    poof_error { this is the rror message }
  }
)


